--- a/distro/build.xml
+++ b/distro/build.xml
@@ -21,6 +21,7 @@
 	   copy.static.resources,
 	   copy.dependencies,
 	   copy.webapps,
+	   copy.docs,
 	   copy.sql">
 		<zip destfile="${target.distro.root}.zip">
 			<fileset dir="target/zip">
@@ -35,7 +36,7 @@
 		</condition>
 		<exec executable="${mvn.executable}" dir=".." failonerror="true">
 			<env key="MAVEN_OPTS" value="-Xmx1024m -Xms512m -XX:MaxPermSize=256M" />
-			<arg line="-Pdistro${nodocs.profile} clean install -Dmaven.test.skip=true" />
+			<arg line="-Pdistro${nodocs.profile} clean install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true" />
 		</exec>
 	</target>
 
@@ -134,7 +135,47 @@
 		<move file="${target.distro.root}/wars/activiti-webapp-rest2-${activiti.version}.war" tofile="${target.distro.root}/wars/activiti-rest.war"/>
 	</target>
 
-	
+	<target name="build.docs" unless="nodocs">
+		<!-- JAVADOCS -->
+		<exec executable="${mvn.executable}" dir="../modules/activiti-engine">
+			<arg line="-DexcludePackageNames=org.activiti.engine.impl* javadoc:javadoc" />
+		</exec>
+		<mkdir dir="${target.distro.root}/docs/javadocs" />
+		<copy todir="${target.distro.root}/docs/javadocs">
+			<fileset dir="../modules/activiti-engine/target/site/apidocs" />
+		</copy>
+		<!-- USERGUIDE -->
+		<ant antfile="../userguide/build.xml" inheritall="false" />
+		<mkdir dir="${target.distro.root}/docs/userguide" />
+		<copy todir="${target.distro.root}/docs/userguide">
+			<fileset dir="../userguide/target/html/en" />
+		</copy>
+	</target>
+
+	<target name="copy.docs" depends="build.docs" unless="nodocs">
+		<!-- COPY XSD -->
+		<copy todir="${target.distro.root}/docs/xsd">
+			<fileset dir="../modules/activiti-bpmn-converter/src/main/resources/org/activiti/impl/bpmn/parser">
+				<include name="*.xsd" />
+			</fileset>
+		</copy>
+	</target>
+
+	<target name="publish.docs" depends="build.docs">
+		<mkdir dir="${activiti.website}/javadocs" />
+		<copy todir="${activiti.website}/javadocs" overwrite="true">
+			<fileset dir="../modules/activiti-engine/target/site/apidocs" />
+		</copy>
+		<mkdir dir="${activiti.website}/userguide" />
+		<copy todir="${activiti.website}/userguide" overwrite="true">
+			<fileset dir="../userguide/target/html/en" />
+		</copy>
+		<copy todir="${activiti.website}" overwrite="true">
+			<fileset dir="src">
+				<include name="readme.html" />
+			</fileset>
+		</copy>
+	</target>
 
 	<target name="copy.sql">
 		<!-- COPY SQL -->
